fix: loancard overflows more gracefully

--- a/components/LoanCard/LoanCard.module.css
+++ b/components/LoanCard/LoanCard.module.css
@@ -9,6 +9,7 @@
 .card {
   display: flex;
   flex-direction: column;
+  height: 100%;
   width: 100%;
   border: thin var(--foreground-text-100) solid;
   border-radius: var(--border-radius-small);
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: row;
   gap: 0.4rem;
+  flex-wrap: wrap;
 }
 
 .attributes > span {
@@ -31,6 +33,7 @@
   font-size: var(--font-small);
   color: var(--foreground-text-100);
   line-height: 1.2rem;
+  white-space: nowrap;
 }
 
 .loading-media {
